[gd_scene load_steps=14 format=2]

[ext_resource path="res://Classes/Root Node.gd" type="Script" id=1]
[ext_resource path="res://Classes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Content/floor.escn" type="PackedScene" id=3]
[ext_resource path="res://Content/floor2.escn" type="PackedScene" id=4]
[ext_resource path="res://Content/grass_floor_tile.escn" type="PackedScene" id=5]
[ext_resource path="res://Classes/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5.02508, 1, 5.01246 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 6.86882, 0.52207, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 4.01283, 0.548055, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 0.539691, 5.99627 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 12.4245, 1, 8.00573 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 3.23153, 0.465964, 3.19144 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 0.235209, 1 )

[node name="Root Node" type="Spatial"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.98896, 2.10232, 5.73637 )

[node name="FloorMesh" parent="." instance=ExtResource( 3 )]

[node name="FloorMesh2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.2484, 3.13935, 1.397 )

[node name="StaticBody" type="StaticBody" parent="FloorMesh2"]

[node name="CollisionShape" type="CollisionShape" parent="FloorMesh2/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.99135, 0, 4.03306 )
shape = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.827393, -0.40937, 0.384495, 0, 0.684614, 0.728905, -0.561623, -0.603091, 0.566445, 4.09058, 6.14528, 10.0148 )
shadow_enabled = true

[node name="floor2Mesh" parent="." instance=ExtResource( 4 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="floor2Mesh"]

[node name="CollisionShape" type="CollisionShape" parent="floor2Mesh/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.97036, 1.48337, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="floor2Mesh/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.99269, 1.48337, 14.0051 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="floor2Mesh/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.02331, 1.4891, 5.99185 )
shape = SubResource( 3 )

[node name="CollisionShape4" type="CollisionShape" parent="floor2Mesh/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.9938, 1.49469, 6.99086 )
shape = SubResource( 4 )

[node name="CollisionShape5" type="CollisionShape" parent="floor2Mesh/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.942804, 0, 6.96225 )
shape = SubResource( 5 )

[node name="grass_tile_mesh" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
transform = Transform( 0.867355, 0.497691, 0, -0.497691, 0.867355, 0, 0, 0, 1, -6.7997, 3.42727, 6.81752 )

[node name="StaticBody" type="StaticBody" parent="grass_tile_mesh"]

[node name="CollisionShape" type="CollisionShape" parent="grass_tile_mesh/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.16328, 0.395062, -3.17716 )
shape = SubResource( 6 )

[node name="PlayerStart" type="Spatial" parent="."]
transform = Transform( 0.669101, 0, -0.743172, 0, 1, 0, 0.743172, 0, 0.669101, 1.37184, 2.0135, 2.49799 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerStart"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 7 )
disabled = true

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="StartCamera" type="Camera" parent="."]
[connection signal="start_game" from="HUD" to="." method="new_game"]
